# llm-vault

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  redaction-eval  vault-agent  vault-ops  vault-ops.toml.example
.github/workflows/: ci.yml
docs/: infrastructure-stack.md  manual-openclaw-agent-validation.md  openclaw-agent-setup.md  openclaw-plugin.md  redaction-evaluation.md
eval/redaction/: README.md
eval/redaction/fixtures/: redaction_eval_hybrid_smoke.jsonl  redaction_eval_phase_a.jsonl
eval/redaction/reports/: ai4privacy-train-regex-vs-hybrid.summary.json  ai4privacy-validation-regex-vs-hybrid.summary.json
plugins/llm-vault-openclaw/: README.md  index.js  openclaw.plugin.json  package.json  plugin-config.example.json
scripts/: cleanup_junk_mail_attachments.py  cron_helper.sh  inspect_random_rows.py  redaction_eval_harness.py  run_acceptance_live.sh  run_vault_registry_sync.sh  run_vault_update_once.sh  vault_agent_cli.py  vault_db.py  vault_db_crypto.py  vault_db_summary.py  vault_fetch.py  vault_ops_cli.py  vault_redaction.py  vault_registry_sync.py  vault_service_defaults.py  vault_sources.py  vault_vector_index.py
skills/vault-unified-local/: SKILL.md  config.example.toml
skills/vault-unified-local/scripts/: vault-unified-cli.py  vault-unified-cli.sh
tests/: conftest.py  test_encryption_policy.py  test_inspect_random_rows.py  test_live_smoke_optional.py  test_mail_bridge.py  test_openclaw_plugin_scaffold.py  test_packaging_install.py  test_redaction_eval_harness.py  test_redaction_persistence.py  test_registry_sync_behavior.py  test_repo_hygiene.py  test_unified_skill_integration.py  test_vault_agent_cli.py  test_vault_db_summary.py  test_vault_fetch.py  test_vault_ops_cli_contract.py  test_vault_sources.py  test_vector_chunking.py  test_vector_generated_corpus.py
